--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,12 @@
             "destination": "/index.html"
         }
     ],
-    "trailingSlash": false
+    "trailingSlash": false,
+    "builds": [
+        { "src": "src/index.js", "use": "@vercel/node" }
+    ],
+    "scripts": {
+        "build": "npm run build"
+    }
+
 }
